[package]
name = "neotext"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
crossterm = "0.27.0"
derive_more = "0.99.18"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.4.0"
